# occtwasm

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SOURCE_AVAILABILITY.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: publish.yml
bindings/manual/cpp/: arc_helpers.cpp  boolean_helpers.cpp  cast_helpers.cpp  curve_measure_helpers.cpp  gprop_helpers.cpp  loft_helpers.cpp  mesh_helpers.cpp  occt_wasm_init.cpp
bindings/manual/ts/: helpers.ts  module-loader.ts  module-registry.ts  types.ts
codegen/config/: TKBRep.yaml  TKGeomBase.yaml  TKMath.yaml  TKTopAlgo.yaml  modules.yaml
codegen/src/: codegen.ts  emit-embind.ts  emit-typescript.ts  generate-yaml.ts  merge-config.ts  overload-resolver.ts  parse-config.ts  parse-headers.ts  type-mapper.ts
docs/: emscripten.md  swig.md
examples/viewer/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
examples/viewer/src/: main.js  main.ts  occt-to-three.ts
examples/viewer/src/demos/: arc.ts  edge.ts  index.ts  intersection.ts  loft-profiles.ts  polyline.ts  wire.ts
plans/: PLAN.md  TODO-A-scaffolding.md  TODO-B-build-scripts.md  TODO-C-codegen.md  TODO-D-manual-bindings.md  TODO-E-compile-wasm.md  TODO-F-npm-package.md  TODO-G-tests.md  test-plan.md
scripts/: build-bindings.sh  build-wasm.sh  copy-wasm.mjs  download-occt.sh
src/: index.ts
swig/: HowToWrap.txt  TKBO.i  TKBRep.i  TKBin.i  TKBinL.i  TKBinXCAF.i  TKBool.i  TKCAF.i  TKCDF.i  TKD3DHost.i  TKDE.i  TKDECascade.i  TKDEGLTF.i  TKDEIGES.i  TKDEJT.i  TKDEOBJ.i  TKDEPLY.i  TKDESTEP.i  TKDESTL.i  TKDEVRML.i  TKFeat.i  TKFillet.i  TKG2d.i  TKG3d.i  TKGeomAlgo.i  TKGeomBase.i  TKHLR.i  TKIVtk.i  TKLCAF.i  TKMath.i  TKMesh.i  TKOffset.i  TKOpenGL.i  TKPrim.i  TKRWMesh.i  TKService.i  TKShHealing.i  TKTObj.i  TKTopAlgo.i  TKV3d.i  (+5 more)
tests/: arc.test.ts  debug_raw.test.ts  debug_wrapper.test.ts  edge.test.ts  intersection.test.ts  loft.test.ts  polyline.test.ts  setup.ts  wire.test.ts
tests/TopoDS/: TopoDS_Shape.test.ts
tests/gp/: gp_Pnt.test.ts
